# YouTube_Explain

./: .gitignore  3TechinquesToQueryStructuredDataWithNaturalLanguage.ipynb  Add_Memory_Messages_using_LangChain&LangGraph.ipynb  Read_AWS_Kinesis_data_from_AWS_Glue.py  create_apache_hudi_table_from_AWS_Kinesis_source.py  create_hudi_table_from_glue_register_in_glue_catalog.py  get_data_from_kinesis_stream.py  put_data_into_kinesis_stream.py  snowflake_tables_in_polaris_catalog.txt  transformer.ipynb
A2A_Protocol/: main.py
AWS Lambda /: asynchronous_synchronous.csv  (+1 more)
Crew AI/Assist/hotel_guide/: README.md  app.py  pyproject.toml  test.py
Crew AI/Assist/hotel_guide/src/hotel_guide/: db.py  main.py
Crew AI/Assist/hotel_guide/src/hotel_guide/crews/hotel_crew/: hotel_crew.py
Crew AI/Crew_AI_Flows/food_review_categorize/: README.md  pyproject.toml  test.py
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/: main.py
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/bad_feedback/: bad_feedback_crew.py
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/bad_feedback/config/: agents.yaml  tasks.yaml
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/good_feedback/: good_feedback_crew.py
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/good_feedback/config/: agents.yaml  tasks.yaml
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/neutral_feedback/: neutral_feedback_crew.py
Crew AI/Crew_AI_Flows/food_review_categorize/src/food_review_categorize/crews/neutral_feedback/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_Introduction_Product/: README.md  pyproject.toml
Crew AI/crew_ai_Introduction_Product/None/: John_Doe_Data_Engineer_Resume.txt
Crew AI/crew_ai_Introduction_Product/output/: resume.txt
Crew AI/crew_ai_Introduction_Product/src/crew_ai_project2/: crew.py  main.py
Crew AI/crew_ai_Introduction_Product/src/crew_ai_project2/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_knowledge/union_budget_knowledge/: README.md  pyproject.toml
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/: main.py
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/budget_or_internet_check_crew/: budget_or_internet_crew.py
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/budget_or_internet_check_crew/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/budget_response_crew/: budget_crew.py
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/budget_response_crew/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/internet_response_crew/: internet_crew.py
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/crews/internet_response_crew/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_knowledge/union_budget_knowledge/src/union_budget_knowledge/tools/: custom_tool.py
Crew AI/crew_ai_memory/: README.md  pyproject.toml  report.md
Crew AI/crew_ai_memory/src/crew_ai_memory/: crew.py  main.py
Crew AI/crew_ai_memory/src/crew_ai_memory/config/: agents.yaml  tasks.yaml
Crew AI/crew_ai_tasks/: README.md  data.csv  pyproject.toml
Crew AI/crew_ai_tasks/db/: chroma.sqlite3
Crew AI/crew_ai_tasks/src/crew_ai_tasks/: crew.py  main.py
Crew AI/crew_ai_tasks/src/crew_ai_tasks/config/: agents.yaml  tasks.yaml
(+202 files in other folders)
