[project]
name = "crew_ai_project2"
version = "0.1.0"
description = "crew_ai_project2 using crewAI"
authors = [{ name = "Praveen Reddy", email = "mailpraveenreddy.c@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_ai_project2 = "crew_ai_project2.main:run"
run_crew = "crew_ai_project2.main:run"
train = "crew_ai_project2.main:train"
replay = "crew_ai_project2.main:replay"
test = "crew_ai_project2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
