[project]
name = "food_review_categorize"
version = "0.1.0"
description = "food_review_categorize using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
kickoff = "food_review_categorize.main:kickoff"
plot = "food_review_categorize.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
